--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
                 <h2>Student Name: Miles Morales</h2>
                 <img src="images/all-good.png" alt="All Good">
                 <h3>Good to Go!</h3>
-                <button id="myBtn">Request Help</button>
+                <button id="myBtn">Turn Help Sign On</button>
             </div>
             <div class="status">
                 <h2>Student Name: Gwen Stacy</h2>
                 <img src="images/all-good.png" alt="All Good">
                 <h3>Good to Go!</h3>
-                <button id="myBtn">Request Help</button>
+                <button id="myBtn">Turn Help Sign On</button>
+            </div>
+            <div class="status">
+                <h2>Student Name: Peter Parker</h2>
+                <img src="images/needs-help.png" alt="All Good">
+                <h3>Needs Help!</h3>
+                <button id="myBtn">Turn Help Sign Off</button>
             </div>
         </div>
 
