--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
     <head>
         <title>Who Needs Help?</title>
         <link rel="stylesheet" href="style.css">
+    </body>
+</html>
     </head>
-    <body>
+    <body> 
         <div class="container">
             <div class="status">
                 <h2>Student Name: Miles Morales</h2>
-                <img src="images/all-good.png" alt="All Good">
-                <h3>Good to Go!</h3>
-                <button id="myBtn">Turn Help Sign On</button>
+                <img id="img1" src="images/all-good.png" alt="All Good">
+                <h3 id="statusText1">Good to Go!</h3>
+                <button id="myBtn1">Turn Help Sign On</button>
             </div>
             <div class="status">
                 <h2>Student Name: Gwen Stacy</h2>
-                <img src="images/all-good.png" alt="All Good">
-                <h3>Good to Go!</h3>
-                <button id="myBtn">Turn Help Sign On</button>
+                <img id="img2" src="images/all-good.png" alt="All Good">
+                <h3 id="statusText2">Good to Go!</h3>
+                <button id="myBtn2">Turn Help Sign On</button>
             </div>
             <div class="status">
                 <h2>Student Name: Peter Parker</h2>
-                <img src="images/needs-help.png" alt="All Good">
-                <h3>Needs Help!</h3>
-                <button id="myBtn">Turn Help Sign Off</button>
+                <img id="img3" src="images/all-good.png" alt="All Good">
+                <h3 id="statusText3">Needs Help!</h3>
+                <button id="myBtn3">Turn Help Sign On</button>
             </div>
         </div>
-
+        <script type="text/javascript" src="script.js"></script>
     </body>
     </html>
